[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Fonts/minimal3x5.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/Code/Scripts/UIMain.gd" type="Script" id=2]
[ext_resource path="res://Assets/Graphics/PlaceholderTextures/placeholder_active_32x32.png" type="Texture" id=3]
[ext_resource path="res://Assets/Graphics/PlaceholderTextures/placeholder_32x32.png" type="Texture" id=4]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 32, 32 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[node name="ProperUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="EnemyStateInfo" type="Control" parent="."]
margin_right = 65.0
margin_bottom = 27.0

[node name="Power" type="Control" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -43.0
margin_top = -38.0
margin_right = -9.0
margin_bottom = 48.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Upgrade" type="Button" parent="."]
margin_left = 348.0
margin_top = 232.0
margin_right = 465.0
margin_bottom = 261.0
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "Upgrade Power"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChooseTurretType" type="Panel" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -52.0
margin_right = 118.0
margin_bottom = -3.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="ChooseTurretType"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 16.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Basic" type="TextureButton" parent="ChooseTurretType/HBoxContainer"]
margin_right = 32.0
margin_bottom = 33.0
texture_normal = ExtResource( 4 )

[node name="Electricity" type="TextureButton" parent="ChooseTurretType/HBoxContainer"]
margin_left = 36.0
margin_right = 68.0
margin_bottom = 33.0
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Railgun" type="TextureButton" parent="ChooseTurretType/HBoxContainer"]
margin_left = 72.0
margin_right = 104.0
margin_bottom = 33.0
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ChooseTurretType"]
margin_left = 1.94674
margin_top = 2.05899
margin_right = 53.9467
margin_bottom = 14.059
custom_fonts/font = SubResource( 3 )
text = "Towers"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Upgrade" to="." method="_on_Upgrade_pressed"]
[connection signal="pressed" from="ChooseTurretType/HBoxContainer/Basic" to="." method="_on_tower_selected" binds= [ "basic" ]]
[connection signal="pressed" from="ChooseTurretType/HBoxContainer/Electricity" to="." method="_on_tower_selected" binds= [ "electric" ]]
[connection signal="pressed" from="ChooseTurretType/HBoxContainer/Railgun" to="." method="_on_tower_selected" binds= [ "railgun" ]]
